# hyperliquid-agent

./: README.md  hyperliquid_notebook.ipynb  pyproject.toml  requirements.txt
scripts/: init_db.sql
src/: hyperliquid_notebook.ipynb
src/api/: main.py
src/clients/: agent.py  agent_v1.py  agent_v3.py  alchemy.py  database.py  hyperliquid.py  hyperliquid_v1.py
src/config/: settings.py
tests/: test_alchemy.py  test_hyperliquid.py  test_hyperliquid_old.py  test_main.py
