[project]
name = "spectral-rnd2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.13",
    "asyncpg>=0.30.0",
    "ccxt>=4.4.30",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "hyperliquid-python-sdk>=0.10.1",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "langchain>=0.3.20",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.8",
    "langchain-postgres>=0.0.13",
    "langgraph>=0.3.5",
    "openai>=1.65.3",
    "pgvector>=0.3.6",
    "psycopg2>=2.9.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "ruff>=0.9.10",
    "uvicorn>=0.34.0",
]
